Fix layout markup on mobile devices

--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -1,4 +1,13 @@
 .page-home {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 20px 0;
 
   @include media-lg {
